[package]
name                      = "ipfs-api-backend-reqwest"
description               = "Hyper implementation of IPFS HTTP API"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
edition                   = "2018"
documentation             = "https://docs.rs/ipfs-api"
repository                = "https://github.com/ferristseng/rust-ipfs-api"
keywords                  = ["ipfs"]
categories                = ["filesystem", "web-programming"]
version                   = "0.1.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"

[dependencies]
async-trait               = "0.1"
bytes                     = "1.0"
futures                   = "0.3"
http                      = "0.2"
reqwest                   = { version = "0.11", default-features = false, features = ["multipart", "stream"] }
ipfs-api-prelude          = { version = "0.1.0", path = "../ipfs-api-prelude" }
serde                     = "1.0"
thiserror                 = "1.0"

